--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 DATABASE_URL="mongodb+srv://tejas:nishant@cluster1.fd0kqlo.mongodb.net/test"
+NEXTAUTH_JWT_SECRET="secret"
+NEXTAUTH_SECRET="secret"
+GITHUB_ID=4167bdaf0ae576b1a13d
+GITHUB_SECRET=e53fcaa111c0419e4b6c38246a1341a975771159
+GOOGLE_CLIENT_ID="4167bdaf0ae576b1a13d"
+GOOGLE_CLIENT_SECRET="e53fcaa111c0419e4b6c38246a1341a975771159"
