--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
+    "heroicons": "^2.0.16",
+    "lodash": "^4.17.21",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
