--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/lodash": "^4.14.191",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "prisma": "^2.32.1"
   }
 }
